--- a/NBD_ASP_Projekt/NBD_ASP_Projekt.csproj
+++ b/NBD_ASP_Projekt/NBD_ASP_Projekt.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -13,6 +13,14 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.13" />
+    <PackageReference Include="MongoDB.Bson" Version="2.19.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
+    <PackageReference Include="MongoDB.Driver.GridFS" Version="2.19.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NBD_ASP_Projekt.Models\NBD_ASP_Projekt.Models.csproj" />
+    <ProjectReference Include="..\NBD_ASP_Projekt.Services\NBD_ASP_Projekt.Services.csproj" />
   </ItemGroup>
 
 </Project>
