Moved connection string to appsettings.json

--- a/NBD_ASP_Projekt/appsettings.json
+++ b/NBD_ASP_Projekt/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoDb": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "test"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-NBD_ASP_Projekt-0e38e1fe-f37b-4192-a909-3f4bd93c73de;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
@@ -10,3 +14,4 @@
   },
   "AllowedHosts": "*"
 }
+{
