--- a/NBD_ASP_Projekt.Models/NBD_ASP_Projekt.Models.csproj
+++ b/NBD_ASP_Projekt.Models/NBD_ASP_Projekt.Models.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <PackageReference Include="MongoDB.Bson" Version="2.19.1" />
   </ItemGroup>
 
 </Project>
