--- a/NBD_ASP_Projekt.Services/NBD_ASP_Projekt.Services.csproj
+++ b/NBD_ASP_Projekt.Services/NBD_ASP_Projekt.Services.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="MongoDB.Bson" Version="2.19.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
+    <PackageReference Include="MongoDB.Driver.GridFS" Version="2.19.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NBD_ASP_Projekt.Models\NBD_ASP_Projekt.Models.csproj" />
+  </ItemGroup>
+
 </Project>
